--- a/static/css/account_base.css
+++ b/static/css/account_base.css
@@ -57,3 +57,138 @@
   font-size: 1.25rem;
 }
 /*nav*/
+
+/* JS 없이 호버로 드롭다운 구현 */
+.base__dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.base__dropbtn {
+  cursor: pointer;
+}
+
+.base__dropbtn:hover {
+  color: #2253ff !important;
+}
+
+.base__dropmenu {
+  display: none;
+  opacity: 0;
+  position: absolute;
+  z-index: 1; /*다른 요소들보다 앞에 배치*/
+  background-color: white;
+  width: 6em;
+  top: 100%;
+  transform: translateX(-20%);
+}
+
+.base__dropmenu a {
+  display: block;
+  text-decoration: none;
+  color: rgb(37, 37, 37);
+  font-size: 12px;
+  padding: 12px 12px;
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
+  background-color: white;
+}
+
+.base__dropmenu a:hover {
+  background-color: #e9f7ff;
+}
+
+.base__dropdown:hover .base__dropmenu {
+  display: block;
+  opacity: 1;
+}
+
+/* 프로필 드롭다운 메뉴 */
+
+.base__profile_dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.base__profile_dropbtn {
+  cursor: pointer;
+}
+
+.base__profile_dropbtn:hover {
+  color: #2253ff !important;
+}
+
+.base__profile_dropmenu {
+  display: none;
+  opacity: 0;
+  position: absolute;
+  z-index: 1; /*다른 요소들보다 앞에 배치*/
+  background-color: white;
+  width: 6em;
+  height: 6em;
+  top: 100%;
+  transform: translateX(-50%);
+}
+
+.base__profile_dropmenu a {
+  display: block;
+  text-decoration: none;
+  color: rgb(37, 37, 37);
+  font-size: 12px;
+  padding: 12px 12px;
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
+  background-color: white;
+}
+
+.base__profile_dropmenu a:hover {
+  background-color: #e9f7ff;
+}
+
+.base__profile_dropdown:hover .base__profile_dropmenu {
+  display: block;
+  opacity: 1;
+}
+
+/* 모각코 드롭다운 메뉴 */
+
+.base__post_dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.base__post_dropbtn {
+  cursor: pointer;
+}
+
+.base__post_dropbtn:hover {
+  color: #2253ff !important;
+}
+
+.base__post_dropmenu {
+  display: none;
+  opacity: 0;
+  position: absolute;
+  z-index: 1; /*다른 요소들보다 앞에 배치*/
+  background-color: white;
+  width: 6em;
+  top: 100%;
+  transform: translateX(-20%);
+}
+
+.base__post_dropmenu a {
+  display: block;
+  text-decoration: none;
+  color: rgb(37, 37, 37);
+  font-size: 12px;
+  padding: 12px 12px;
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
+  background-color: white;
+}
+
+.base__post_dropmenu a:hover {
+  background-color: #e9f7ff;
+}
+
+.base__post_dropdown:hover .base__post_dropmenu {
+  display: block;
+  opacity: 1;
+}
