--- a/static/css/find_id.css
+++ b/static/css/find_id.css
@@ -90,7 +90,31 @@ main .input {
   font-weight: 900;
 }
 
-#searchModal.find__modal-overlay {
+#backtologin__btn {
+  cursor: pointer;
+  margin-top: 1rem;
+  width: 15rem;
+  height: 3rem;
+  font-size: 1rem;
+  outline: 0;
+  border: 0;
+  border-radius: 0.5rem;
+  background-color: rgb(47, 82, 245);
+  color: #fff;
+  font-weight: 100;
+}
+
+.search__result {
+  width: 22rem;
+  height: 15rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+#search__modal.modal-overlay {
   display: none;
   width: 100%;
   height: 130%;
@@ -100,7 +124,7 @@ main .input {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   background: rgba(103, 99, 99, 0.25);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(1.5px);
@@ -109,36 +133,35 @@ main .input {
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
-#searchModal .modal__window {
+#search__modal .modal__window {
   background: #fff;
   box-shadow: 0 8px 32px 0 rgba(16, 18, 42, 0.37);
   backdrop-filter: blur(13.5px);
   -webkit-backdrop-filter: blur(13.5px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
-  width: 35rem;
-  height: auto;
+  width: 25rem;
+  height: 12rem;
   position: relative;
   padding: 10px;
+  margin-top: 15rem;
 }
-#searchModal .modal__title {
-  padding-left: 10px;
-  display: inline;
-  color: black;
-}
-#searchModal .modal__title h3 {
-  display: inline;
-}
-#searchModal .modal-close {
+
+#search__modal .modal-close {
   display: inline;
   float: right;
   padding-right: 10px;
   cursor: pointer;
   color: black;
+  font-weight: 100;
 }
 
-#searchModal .modal__content {
-  margin-top: 20px;
+#search__modal .modal__content p {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 3rem;
+  flex-wrap: wrap;
   padding: 0px 10px;
   color: black;
   font-size: 1rem;
