--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -13,7 +13,7 @@
         <div class="input">
           <div class="input__id">
             {{ form.username.errors }}
-            <lable for="{{ form.id.username_for_label }}"></lable>
+            <lable for="{{ form.username.id_for_label }}"></lable>
             <input
               type="text"
               name="username"
@@ -48,6 +48,10 @@
       </form>
       <div id="sub__menu">
         <a href="{% url 'users:find_id' %}">아이디 찾기&nbsp;&nbsp;</a> |
+        <a href="{% url 'users:reset_pw' %}"
+          >&nbsp;비밀번호 재설정&nbsp;&nbsp;</a
+        >
+        |
         <a href="{% url 'users:signup' %}">&nbsp;&nbsp;회원가입</a>
       </div>
 
