--- a/users/templates/users/reset_pw_done.html
+++ b/users/templates/users/reset_pw_done.html
@@ -1,22 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <!--Password reset sent-->
-    <div>
-      <h2>비밀번호 재설정 메일 발송 완료</h2>
-      <hr />
-      <p>
-        비밀번호 재설정을 위한 메일이 발송되었습니다.<br />
-        30분 내에 비밀번호를 재설정 해주세요.<br />
-        만약 메일이 오지 않는다면, 이메일 주소를 다시 한번 확인해 주시고, 스팸
-        폴더를 확인해 주세요.
-      </p>
+{% extends 'users/account_base.html' %} {% block content %}
+<main>
+  <div id="reset-pw-done__container">
+    <div id="reset-pw-done__title">
+      <span>✉️ 비밀번호 재설정 메일 발송 완료 ✉️</span>
     </div>
-  </body>
-</html>
+    <div class="hr">
+      <hr />
+    </div>
+    <div id="reset-pw-done__desc">
+      비밀번호 재설정을 위한 메일이 발송되었습니다. <br />
+      30분 내에 비밀번호를 재설정해주세요. <br />만약 메일이 오지 않는다면,
+      이메일 주소와 스팸폴더를 확인해 주세요.📬
+    </div>
+  </div>
+</main>
+{% endblock %}
