--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -70,7 +70,7 @@
               <a href="{% url 'users:profile_view' user.id %}">마이페이지</a>
             </li>
             <li>
-              <a href="{% url 'users:logout' %}">로그아웃</a>
+              <a href="{% url 'users:logout' %}?next={{request.path}}">로그아웃</a>
             </li>
           </ul>
         </div>
@@ -86,7 +86,7 @@
             </ul>
           </div>
         </li>
-        <li><a href="{% url 'users:login' %}">로그인</a></li>
+        <li><a href="{% url 'users:login' %}?next={{request.path}}">로그인</a></li>
         {% endif %}
       </ul>
     </nav>
