--- a/static/css/reset_pw.css
+++ b/static/css/reset_pw.css
@@ -9,6 +9,13 @@ main {
   margin-top: 5rem;
 }
 
+#reset__form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
 #reset-pw__title {
   font-size: 2rem;
   font-weight: 900;
@@ -33,7 +40,8 @@ main {
   font-size: 1rem;
   color: #8c8c8c;
   font-weight: 900;
-  margin-bottom: 2rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
   line-height: 1.2rem;
   display: flex;
   flex-direction: row;
@@ -94,6 +102,9 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
+  width: 40rem;
+  height: auto;
 }
 
 #reset-pw__btn {
