--- a/users/templates/users/reset_pw.html
+++ b/users/templates/users/reset_pw.html
@@ -5,7 +5,7 @@
       <span>비밀번호 재설정</span>
     </div>
     <div id="reset-pw__input">
-      <form method="POST">
+      <form method="POST" id="reset__form">
         {% csrf_token %}
 
         <div class="input__email">
@@ -32,16 +32,16 @@
             placeholder="아이디"
           />
         </div>
-        <!--{{ form }}-->
+        {{ form }}
         <div id="reset-pw__btn__container">
+          <div id="reset-pw__desc">
+            비밀번호를 잊어버리셨나요?<br />
+            가입하신 아이디와 이메일을 입력해 주세요.<br />
+            잠시 후 해당 이메일로 비밀번호 재설정 메일이 발송됩니다.
+          </div>
           <button id="reset-pw__btn" type="submit">전송</button>
         </div>
       </form>
-      <div id="reset-pw__desc">
-        비밀번호를 잊어버리셨나요?<br />
-        가입하신 아이디와 이메일을 입력해 주세요.<br />
-        잠시 후 해당 이메일로 비밀번호 재설정 메일이 발송됩니다.
-      </div>
     </div>
   </div>
 </main>
