--- a/users/templates/users/account_base.html
+++ b/users/templates/users/account_base.html
@@ -15,8 +15,10 @@
     <link rel="stylesheet" href="{%static 'css/change_pw.css' %}" />
     <link rel="stylesheet" href="{%static 'css/reset_pw.css' %}" />
     <link rel="stylesheet" href="{%static 'css/reset_pw_done.css' %}" />
+    <link rel="stylesheet" href="{%static 'css/reset_pw_confirm.css' %}" />
     <link rel="stylesheet" href="{%static 'css/reset_pw_complete.css' %}" />
     <link rel="stylesheet" href="{%static 'css/find_pw.css' %}" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&family=Noto+Sans:wght@600&display=swap"
       rel="stylesheet"
