--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -56,18 +56,18 @@
           {%endif%}
         </div>
         <div id="main_detail__top__like">
-          <form action="{% url 'likes:add' post.id 1 %}" method="post">
+          <form action="{% url 'users:like' post.id 1 %}" method="post">
             {% csrf_token %}
-            <button id="main_detail__top__like_btn" type="button">
+            <button id="main_detail__top__like_btn" type="submit">
               <i class="fa-regular fa-heart fa-lg"></i>
-              <p>{{len_likes}}좋아요</p>
+              <p>{{post.likes}}좋아요</p>
             </button>
           </form>
-          <form action="{% url 'likes:delete' post.id 1 %}" method="post">
+          <form action="{% url 'users:unlike' post.id 1 %}" method="post">
             {% csrf_token %}
-            <button id="main_detail__top__like_btn" type="button">
+            <button id="main_detail__top__like_btn" type="submit">
               <i class="fa-regular fa-heart fa-lg"></i>
-              <p>{{len_likes}}좋아요 취소</p>
+              <p>{{post.likes}}좋아요 취소</p>
             </button>
           </form>
         </div>
