[feat]댓글, 후기 부분 1차 기능추가

--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -36,7 +36,7 @@
               <span>모각코</span>
             </div>
             <ul class="base__post_dropmenu">
-              <li><a href="{% url 'posts:home' %}">모각코 모집</a></li>
+              <li><a href="{% url 'posts:home' %}">모각코 홈</a></li>
               <li><a href="{% url 'posts:review_home' %}">모각코 후기</a></li>
             </ul>
           </div>
