--- a/place/templates/place/detail.html
+++ b/place/templates/place/detail.html
@@ -29,7 +29,7 @@
                   <p>{{place.likes}}</p>
                 </button>
               </form>
-            </div> -->
+            </div>
         <div class="dropdown">
           <button onclick="dp_menu()" class="button"><i class="fa-solid fa-ellipsis"></i></button>
           <div style="display: none;" id="drop-content">
