--- a/static/css/reset_pw.css
+++ b/static/css/reset_pw.css
@@ -37,12 +37,12 @@ main {
 
 #reset-pw__desc {
   width: 30rem;
-  font-size: 1rem;
-  color: #8c8c8c;
-  font-weight: 900;
+  font-size: 0.8rem;
+  color: #000;
+  font-weight: 100;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
-  line-height: 1.2rem;
+  line-height: 1rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
