--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -41,7 +41,7 @@
             </ul>
           </div>
         </li>
-        <li><a href="{% url 'place:home' %}">플레이스</a></li>
+        <li><a href="{% url 'place:home' 'all' %}">플레이스</a></li>
         <li><a href="{% url 'notice:home' %}">공지사항</a></li>
       </ul>
       <ul class="navbar__shortcut">
@@ -70,7 +70,9 @@
               <a href="{% url 'users:profile_view' user.id %}">마이페이지</a>
             </li>
             <li>
-              <a href="{% url 'users:logout' %}?next={{request.path}}">로그아웃</a>
+              <a href="{% url 'users:logout' %}?next={{request.path}}"
+                >로그아웃</a
+              >
             </li>
           </ul>
         </div>
@@ -86,7 +88,9 @@
             </ul>
           </div>
         </li>
-        <li><a href="{% url 'users:login' %}?next={{request.path}}">로그인</a></li>
+        <li>
+          <a href="{% url 'users:login' %}?next={{request.path}}">로그인</a>
+        </li>
         {% endif %}
       </ul>
     </nav>
