--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -240,7 +240,7 @@
         <div class="main_detail__review__contents_revise">
           <img src="/static/img/dots.png" alt="" />
           {% if review.user == request.user %}
-				  <a href="{% url 'posts:review-revise' review.id%}">수정</a>
+				  <button onclick="changeForm3({{review.id}}, '{{review.content}}');">수정</button>
 				  <form action="{% url 'posts:review-delete' review.id %}" method="post">
 					  {% csrf_token %}
 					  <button>삭제</button>
@@ -248,7 +248,7 @@
 				  {%endif%}
         </div>
       </div>
-      <div class="main_detail__review__contents_content">
+      <div class="main_detail__review__contents_content__{{review.id}}">
         {% if review.image %}
 				<img src="{{review.image.url}}"/>
 				{% else %}
@@ -278,22 +278,20 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
-  const sp = document.getElementById('main_detail__comment__contents__txt')
-  let idd = null;
-  
+  // 댓글 수정
   const changeForm = (id, content) => {
-    idd = id;
-    const revise = document.getElementById(`main_detail__comment__contents__txt__${id}`)
-    revise.innerHTML = `<form action="/comment/revise/${id}" method="post">{% csrf_token %}<textarea type="text" name="content">${content}</textarea><input type="submit" value="등록"/><a href="{% url 'posts:detail' post.id %}">취소</a></form>`
+    const reviseCmt = document.getElementById(`main_detail__comment__contents__txt__${id}`)
+    reviseCmt.innerHTML = `<form action="/comment/revise/${id}" method="post">{% csrf_token %}<textarea type="text" name="content">${content}</textarea><input type="submit" value="등록"/><a href="{% url 'posts:detail' post.id %}">취소</a></form>`
   }
 
+  // 대댓글
   const changeForm2 = (id) => {
-    const recomt = document.getElementById(`main_detail_comment_contents_reply_form__${id}`)
-    recomt.innerHTML = `<form action="/comment/recomment/${id}" method="post">{% csrf_token %}<textarea type="text" name="content"></textarea><input type="submit" value="등록"/><a href="{% url 'posts:detail' post.id %}">취소</a></form>`
+    const reCmt = document.getElementById(`main_detail_comment_contents_reply_form__${id}`)
+    reCmt.innerHTML = `<form action="/comment/recomment/${id}" method="post">{% csrf_token %}<textarea type="text" name="content"></textarea><input type="submit" value="등록"/><a href="{% url 'posts:detail' post.id %}">취소</a></form>`
   }
 
+  // 댓글 삭제
   const requestDelete = new XMLHttpRequest();
-
   const onClickdelete = (id) => {
       const url = "/comment/delete";
       requestDelete.open("POST",url,true);
@@ -303,7 +301,6 @@
       );
       requestDelete.send(JSON.stringify({'id':id}));
   }
-
   requestDelete.onreadystatechange = () => {
       if (requestDelete.readyState === XMLHttpRequest.DONE){
           if(requestDelete.status < 400){
@@ -316,6 +313,46 @@
           }
       }
   }
+
+  // 후기 수정
+  const changeForm3 = (id, content) => {
+    console.log(id)
+    console.log(content)
+    const reviseRvw = document.querySelector(`.main_detail__review__contents_content__${id}`)
+    console.log(reviseRvw);
+    reviseRvw.innerHTML = `<form action="/post/review/revise/${id}" method="post" enctype="multipart/form-data">
+      {% csrf_token %}
+      <div id="main_detail__review__blank_box">
+        <div id="main_detail__review__filebox">
+          <label for="main_detail__review__upload_file">
+            <div id="main_detail__review__uploadbtn">
+              <h1>+</h1>
+              <p>이미지를 드래그하거나 <br> 클릭해서 업로드해주세요</p>
+            </div>
+          </label>
+          <input
+          type="file"
+          name="review_image"
+          id="main_detail__review__upload_file"
+          accept="image/*"
+          />
+        </div>
+        <textarea
+          name="review_content"
+          id="review_input_box"
+          cols="30"
+          rows="10"
+        >${content}</textarea>
+      </div>
+      <div id="main_detail__review__btnplace">
+        <button type="submit" id="main_detail__review__btn">
+          <p>후기 작성</p>
+        </button>
+      </div>
+    </form>`
+  }
+
+  // 후기 삭제
 
 </script>
 {% endblock content%}
