[fix] signup 체크박스 유효성 검사 구현

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -39,7 +39,7 @@
             />
           </div>
           <div class="align__cb">
-            <input type="checkbox" id="input__cb" />
+            <input type="checkbox" id="input__cb" name="input__cb" />
             <label for="input__cb"></label>
             <span>아이디 저장</span>
           </div>
