--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -52,6 +52,7 @@ main .input {
   border-radius: 0.5rem;
   margin-bottom: 1rem;
   padding-left: 1rem;
+  font-size: 1rem;
   border: 1px solid #8c8c8c;
 }
 
