--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -159,7 +159,7 @@
         </div>
         {% if comment.user == request.user %}
         <button onclick="changeForm({{comment.id}}, '{{comment.content}}');">수정</button>
-        <button onclick="onClickdelete({{comment.id}})">삭제</button> 
+        <button onclick="onClickdelete({{comment.id}});">삭제</button> 
         {% endif%}
         <button onclick="changeForm2({{comment.id}});">답글</button>
         <br />
@@ -209,57 +209,56 @@
         </button>
       </div>
     </form>
-    {% for review in reviews %}
     <div id="main_detail__review__contents">
-      <div class="main_detail__review__contents_top">
-        <div class="review__contents_box__user_info">
-          <div class="review__contents_box__profile">
-            <div class="review__contents_box__profile_img">
-              <i class="fa-solid fa-circle-user fa-3x"></i>
-              <img src="{{review.user.profile_img}}" alt="profile_img"></img>
-            </div>
-            <div class="review__contents_box__info">
-              <div class="main_detail__contents__profile_name">
-                <span>{{review.user.nickname}}</span>
+    {% for review in reviews %}
+      <div id="main_detail__review__each__contents__{{review.id}}">
+        <div class="main_detail__review__contents_top">
+          <div class="review__contents_box__user_info">
+            <div class="review__contents_box__profile">
+              <div class="review__contents_box__profile_img">
+                <i class="fa-solid fa-circle-user fa-3x"></i>
+                <img src="{{review.user.profile_img}}" alt="profile_img"></img>
               </div>
-              <div class="main_detail__contents__profile_time">
-                <span>{{review.write_at}}</span>
+              <div class="review__contents_box__info">
+                <div class="main_detail__contents__profile_name">
+                  <span>{{review.user.nickname}}</span>
+                </div>
+                <div class="main_detail__contents__profile_time">
+                  <span>{{review.write_at}}</span>
+                </div>
               </div>
             </div>
+            {% if review.user == post.user %}
+            <div class="review__contents_box__auth">
+              <div id="review__contents_box__auth_host">주최자</div>
+            </div>
+            {% else %}
+            <div class="review__contents_box__auth">
+              <div id="review__contents_box__auth_guest">참여자</div>
+            </div>
+            {%endif%}
           </div>
-          {% if review.user == post.user %}
-			    <div class="review__contents_box__auth">
-            <div id="review__contents_box__auth_host">주최자</div>
+          <div class="main_detail__review__contents_revise">
+            <img src="/static/img/dots.png" alt="" />
+            {% if review.user == request.user %}
+            <button onclick="changeForm3({{review.id}}, '{{review.content}}');">수정</button>
+            <button onclick="onClickdelete2({{review.id}})">삭제</button>
+            {%endif%}
           </div>
-			    {% else %}
-			    <div class="review__contents_box__auth">
-            <div id="review__contents_box__auth_guest">참여자</div>
+        </div>
+        <div class="main_detail__review__contents_content__{{review.id}}">
+          {% if review.image %}
+          <img src="{{review.image.url}}"/>
+          {% else %}
+          <p>no image</p>
+          {% endif %}
+          <div class="main_detail__review__contents_text">
+            {{review.content}}
           </div>
-			    {%endif%}
         </div>
-        <div class="main_detail__review__contents_revise">
-          <img src="/static/img/dots.png" alt="" />
-          {% if review.user == request.user %}
-				  <button onclick="changeForm3({{review.id}}, '{{review.content}}');">수정</button>
-				  <form action="{% url 'posts:review-delete' review.id %}" method="post">
-					  {% csrf_token %}
-					  <button>삭제</button>
-				  </form>
-				  {%endif%}
-        </div>
-      </div>
-      <div class="main_detail__review__contents_content__{{review.id}}">
-        {% if review.image %}
-				<img src="{{review.image.url}}"/>
-				{% else %}
-				<p>no image</p>
-				{% endif %}
-        <div class="main_detail__review__contents_text">
-          {{review.content}}
-        </div>
-      </div>
     </div>
     {% endfor %}
+    </div>
     <div>
       {% if reviews.has_previous %}
         <a href="?page={{reviews.previous_page_number}}">이전</a>
@@ -291,20 +290,20 @@
   }
 
   // 댓글 삭제
-  const requestDelete = new XMLHttpRequest();
+  const cmtDelete = new XMLHttpRequest();
   const onClickdelete = (id) => {
       const url = "/comment/delete";
-      requestDelete.open("POST",url,true);
-      requestDelete.setRequestHeader(
+      cmtDelete.open("POST",url,true);
+      cmtDelete.setRequestHeader(
           "Content-Type",
           "application/x-www-form-urlencoded"
       );
-      requestDelete.send(JSON.stringify({'id':id}));
+      cmtDelete.send(JSON.stringify({'id':id}));
   }
-  requestDelete.onreadystatechange = () => {
-      if (requestDelete.readyState === XMLHttpRequest.DONE){
-          if(requestDelete.status < 400){
-              const {id, len} = JSON.parse(requestDelete.response);
+  cmtDelete.onreadystatechange = () => {
+      if (cmtDelete.readyState === XMLHttpRequest.DONE){
+          if(cmtDelete.status < 400){
+              const {id, len} = JSON.parse(cmtDelete.response);
               const topdom = document.getElementById("main_detail__comment__contents");
               const deletedom = document.getElementById(`main_detail__comment__each__contents__${id}`);
               topdom.removeChild(deletedom);
@@ -322,37 +321,57 @@
     console.log(reviseRvw);
     reviseRvw.innerHTML = `<form action="/post/review/revise/${id}" method="post" enctype="multipart/form-data">
       {% csrf_token %}
-      <div id="main_detail__review__blank_box">
-        <div id="main_detail__review__filebox">
+      <div class="main_detail__review__blank_box">
+        <div class="main_detail__review__filebox">
           <label for="main_detail__review__upload_file">
-            <div id="main_detail__review__uploadbtn">
+            <div class="main_detail__review__uploadbtn">
               <h1>+</h1>
               <p>이미지를 드래그하거나 <br> 클릭해서 업로드해주세요</p>
             </div>
           </label>
           <input
-          type="file"
-          name="review_image"
-          id="main_detail__review__upload_file"
-          accept="image/*"
-          />
+            type="file"
+            name="review_image"
+            class="main_detail__review__upload_file"
+            accept="image/*" />
         </div>
         <textarea
           name="review_content"
-          id="review_input_box"
+          class="review_input_box"
           cols="30"
           rows="10"
         >${content}</textarea>
       </div>
-      <div id="main_detail__review__btnplace">
-        <button type="submit" id="main_detail__review__btn">
+      <div class="main_detail__review__btnplace">
+        <button type="submit" class="main_detail__review__btn">
           <p>후기 작성</p>
         </button>
+        <a href="{% url 'posts:detail' post.id %}">취소</a>
       </div>
     </form>`
   }
 
   // 후기 삭제
+  const rvwDelete = new XMLHttpRequest();
+  const onClickdelete2 = (id) => {
+      const url = "/post/review/delete";
+      rvwDelete.open("POST",url,true);
+      rvwDelete.setRequestHeader(
+          "Content-Type",
+          "application/x-www-form-urlencoded"
+      );
+      rvwDelete.send(JSON.stringify({'id':id}));
+  }
+  rvwDelete.onreadystatechange = () => {
+      if (rvwDelete.readyState === XMLHttpRequest.DONE){
+          if(rvwDelete.status < 400){
+              const {id} = JSON.parse(rvwDelete.response);
+              const topdom = document.getElementById("main_detail__review__contents");
+              const deletedom = document.getElementById(`main_detail__review__each__contents__${id}`);
+              topdom.removeChild(deletedom);
+          }
+      }
+  }
 
 </script>
 {% endblock content%}
