--- a/users/templates/users/account_base.html
+++ b/users/templates/users/account_base.html
@@ -44,7 +44,7 @@
             </ul>
           </div>
         </li>
-        <li><a href="{% url 'place:home' 'all' %}">플레이스</a></li>
+        <li><a href="{% url 'place:home' %}">플레이스</a></li>
         <li><a href="{% url 'notice:home' %}">공지사항</a></li>
       </ul>
       <ul class="navbar__shortcut">
