--- a/place/templates/place/base.html
+++ b/place/templates/place/base.html
@@ -29,7 +29,7 @@
   <body>
     <nav class="navbar">
       <ul class="navbar__list">
-        <li><a href="{% url 'posts:home' %}">MOCO</a></li>
+        <li><a href="">MOCO</a></li>
         <li>
           <div class="base__post_dropdown">
             <div class="base__post_dropbtn">
@@ -41,7 +41,7 @@
             </ul>
           </div>
         </li>
-        <li><a href="{% url 'place:home' 'all' %}">플레이스</a></li>
+        <li><a href="{% url 'place:home' %}">플레이스</a></li>
         <li><a href="{% url 'notice:home' %}">공지사항</a></li>
       </ul>
       <ul class="navbar__shortcut">
