--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -56,20 +56,10 @@
           {%endif%}
         </div>
         <div id="main_detail__top__like">
-          <form action="{% url 'users:like' post.id 1 %}" method="post">
-            {% csrf_token %}
-            <button id="main_detail__top__like_btn" type="submit">
-              <i class="fa-regular fa-heart fa-lg"></i>
-              <p>{{post.likes}}좋아요</p>
-            </button>
-          </form>
-          <form action="{% url 'users:unlike' post.id 1 %}" method="post">
-            {% csrf_token %}
-            <button id="main_detail__top__like_btn" type="submit">
-              <i class="fa-regular fa-heart fa-lg"></i>
-              <p>{{post.likes}}좋아요 취소</p>
-            </button>
-          </form>
+          <button id="{{post.id}}" onclick="post_like(this.id)">
+            좋아요
+            <span id="like_count">{{post.likes}}</span>
+        </button>
         </div>
       </div>
     </div>
@@ -373,5 +363,24 @@
       }
   }
 
+</script>
+<script src="https://code.jquery.com/jquery-3.5.1.js"
+integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+<script type="text/javascript">
+function post_like(id) {
+    $.ajax({
+        url: "{%url 'users:likes' 1 %}", // data를 전송할 url 입니다. post = 1
+        data: {
+            'id': id
+        }, // id 값 전송
+        dataType: "json",
+        success: function (response) { // ajax 통신이 정상적으로 완료되었을 때
+            $('#like_count').html(response.like_count) //id가 like_count의 내용을 전송받은 좋아요 수로 바꾼다
+            if (response.error) {
+              window.location.replace("http://127.0.0.1:8000/account/login"); // 배포용 서버로 변경
+            } 
+        }
+    })
+}
 </script>
 {% endblock content%}
