[feat] search 기능 구현

--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -17,6 +17,7 @@
             <input
               id="main__search_text"
               type="text"
+              name="search"
               placeholder="관심 모각코를 검색하세요"
             />
             <input
